@@ -12,6 +12,8 @@ Changes in Shorewall 4.4.10
 
 6)  Correct Optimization issue
 
+7)  Rename PREFIX to DESTDIR in install scripts
+
 Changes in Shorewall 4.4.9
 
 1)  Auto-detection of bridges.
